# richmenu

./: LICENSE  README.md  pyproject.toml  test.py
richmenu/: __init__.py  keys.py  menu.py
